--- a/menu.css
+++ b/menu.css
@@ -143,7 +143,7 @@ footer{
 
 /* **************************************************************** */
 
-input[type=text], select, textarea {
+input[type=text], input[type=password], select, textarea {
   width: 500px; /* Full width */
   padding: 12px; /* Some padding */  
   border: 1px solid #ccc; /* Gray border */
