--- a/menu.css
+++ b/menu.css
@@ -5,6 +5,7 @@ body{
     background-attachment: fixed;
     height : 100%;
     min-height : 100%;
+    width: 100%;
 }
 
 header{
@@ -200,10 +201,12 @@ input[type=submit]:hover {
   padding: 12px;
   font-size: 12px;
   border: 12px solid rgba(0,0,20,0.5);
-  width: 21%;
+  width: 25%;
+  align : center;
 }
 .adv {
 display: flex;
+align : center;
 }
 img {
   border: 1px solid #ddd;
